--- a/Core Module Assignment/Core Module Assignment Layout.ipynb
+++ b/Core Module Assignment/Core Module Assignment Layout.ipynb
@@ -5,7 +5,7 @@
    "id": "68aa4cff",
    "metadata": {},
    "source": [
-    "# Python Basics | Assignment"
+    "# Core Module | Assignment"
    ]
   },
   {
