Core Module Assignment 3

--- a/Core Module Assignment/Core Module Assignment 3.ipynb
+++ b/Core Module Assignment/Core Module Assignment 3.ipynb
@@ -43,7 +43,7 @@
     "region_b_mean = sum(region_b_sales) / len(region_b_sales)\n",
     "\n",
     "print(\"Mean sales for Region A:\", region_a_mean)\n",
-    "print(\"Mean sales for Region B:\", region_b_mean)\n"
+    "print(\"Mean sales for Region B:\", region_b_mean)"
    ]
   },
   {
