--- a/Assignment 12.ipynb
+++ b/Assignment 12.ipynb
@@ -16,11 +16,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "492287f1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original linked list:\n",
+      "1 2 3 4 5 \n",
+      "Modified linked list:\n",
+      "1 2 4 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def delete_middle_node(head):\n",
+    "    if not head or not head.next:\n",
+    "        return None\n",
+    "\n",
+    "    slow, fast = head, head\n",
+    "    prev_slow = None\n",
+    "\n",
+    "    while fast and fast.next:\n",
+    "        fast = fast.next.next\n",
+    "        prev_slow = slow\n",
+    "        slow = slow.next\n",
+    "\n",
+    "    prev_slow.next = slow.next\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def print_linked_list(head):\n",
+    "    current = head\n",
+    "    while current:\n",
+    "        print(current.val, end=\" \")\n",
+    "        current = current.next\n",
+    "    print()\n",
+    "\n",
+    "# Example Test \n",
+    "\n",
+    "head = ListNode(1)\n",
+    "head.next = ListNode(2)\n",
+    "head.next.next = ListNode(3)\n",
+    "head.next.next.next = ListNode(4)\n",
+    "head.next.next.next.next = ListNode(5)\n",
+    "\n",
+    "print(\"Original linked list:\")\n",
+    "print_linked_list(head)\n",
+    "\n",
+    "head = delete_middle_node(head)\n",
+    "\n",
+    "print(\"Modified linked list:\")\n",
+    "print_linked_list(head)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,11 +96,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "112878a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def has_loop(head):\n",
+    "    if not head or not head.next:\n",
+    "        return False\n",
+    "\n",
+    "    slow, fast = head, head\n",
+    "\n",
+    "    while fast and fast.next:\n",
+    "        slow = slow.next\n",
+    "        fast = fast.next.next\n",
+    "\n",
+    "        if slow == fast:\n",
+    "            return True\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "# Example Test\n",
+    "\n",
+    "head = ListNode(1)\n",
+    "head.next = ListNode(8)\n",
+    "head.next.next = ListNode(3)\n",
+    "head.next.next.next = ListNode(4)\n",
+    "\n",
+    "result = has_loop(head)\n",
+    "print(result) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,11 +158,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b94fc87a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def find_nth_from_end(head, N):\n",
+    "    if not head or N <= 0:\n",
+    "        return None\n",
+    "\n",
+    "    first_ptr = head\n",
+    "    second_ptr = head\n",
+    "\n",
+    "    for _ in range(N):\n",
+    "        if second_ptr is None:\n",
+    "            return None\n",
+    "        second_ptr = second_ptr.next\n",
+    "\n",
+    "    while second_ptr:\n",
+    "        first_ptr = first_ptr.next\n",
+    "        second_ptr = second_ptr.next\n",
+    "\n",
+    "    return first_ptr.val\n",
+    "\n",
+    "# Example Test\n",
+    "head = ListNode(1)\n",
+    "current = head\n",
+    "for i in range(2, 10):\n",
+    "    current.next = ListNode(i)\n",
+    "    current = current.next\n",
+    "\n",
+    "N = 2\n",
+    "result = find_nth_from_end(head, N)\n",
+    "print(result)  \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,11 +223,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d1aa53e5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def is_palindrome(head):\n",
+    "    if not head or not head.next:\n",
+    "        return True\n",
+    "\n",
+    "    chars = []\n",
+    "    current = head\n",
+    "    while current:\n",
+    "        chars.append(current.val)\n",
+    "        current = current.next\n",
+    "\n",
+    "    current = head\n",
+    "    while current and chars:\n",
+    "        if current.val != chars.pop():\n",
+    "            return False\n",
+    "        current = current.next\n",
+    "\n",
+    "    return True\n",
+    "\n",
+    "def create_linked_list(chars):\n",
+    "    if not chars:\n",
+    "        return None\n",
+    "    head = ListNode(chars[0])\n",
+    "    current = head\n",
+    "    for char in chars[1:]:\n",
+    "        current.next = ListNode(char)\n",
+    "        current = current.next\n",
+    "    return head\n",
+    "\n",
+    "# Example Test\n",
+    "linked_list1 = create_linked_list(['R', 'A', 'D', 'A', 'R'])  \n",
+    "linked_list2 = create_linked_list(['C', 'O', 'D', 'E'])  \n",
+    "\n",
+    "print(is_palindrome(linked_list1))  \n",
+    "print(is_palindrome(linked_list2)) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,11 +300,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ebfd6057",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 8 -> 3 -> 4 -> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0):\n",
+    "        self.val = val\n",
+    "        self.next = None\n",
+    "\n",
+    "def detectAndRemoveLoop(head):\n",
+    "    slow = head\n",
+    "    fast = head\n",
+    "\n",
+    "    while fast and fast.next:\n",
+    "        slow = slow.next\n",
+    "        fast = fast.next.next\n",
+    "\n",
+    "        if slow == fast:\n",
+    "            break\n",
+    "\n",
+    "    if not fast or not fast.next:\n",
+    "        return head\n",
+    "\n",
+    "    slow = head\n",
+    "    while slow != fast:\n",
+    "        slow = slow.next\n",
+    "        fast = fast.next\n",
+    "\n",
+    "    while fast.next != slow:\n",
+    "        fast = fast.next\n",
+    "\n",
+    "    fast.next = None\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def createLinkedList(values):\n",
+    "    dummy = ListNode()\n",
+    "    current = dummy\n",
+    "    for val in values:\n",
+    "        current.next = ListNode(val)\n",
+    "        current = current.next\n",
+    "    return dummy.next\n",
+    "\n",
+    "def printLinkedList(head):\n",
+    "    current = head\n",
+    "    while current:\n",
+    "        print(current.val, end=\" -> \")\n",
+    "        current = current.next\n",
+    "    print(\"None\")\n",
+    "\n",
+    "# Example Test\n",
+    "values = [1, 8, 3, 4]\n",
+    "head = createLinkedList(values)\n",
+    "head = detectAndRemoveLoop(head)\n",
+    "printLinkedList(head) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,11 +386,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "eb21f3bf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 2 -> 5 -> 6 -> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def skip_and_delete(head, M, N):\n",
+    "    if not head or M <= 0 or N <= 0:\n",
+    "        return None\n",
+    "\n",
+    "    current = head\n",
+    "    prev = None\n",
+    "\n",
+    "    while current:\n",
+    "        for _ in range(M):\n",
+    "            if not current:\n",
+    "                break\n",
+    "            prev = current\n",
+    "            current = current.next\n",
+    "\n",
+    "        for _ in range(N):\n",
+    "            if not current:\n",
+    "                break\n",
+    "            current = current.next\n",
+    "\n",
+    "        prev.next = current\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def create_linked_list(values):\n",
+    "    if not values:\n",
+    "        return None\n",
+    "\n",
+    "    head = ListNode(values[0])\n",
+    "    current = head\n",
+    "    for val in values[1:]:\n",
+    "        current.next = ListNode(val)\n",
+    "        current = current.next\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def print_linked_list(head):\n",
+    "    current = head\n",
+    "    while current:\n",
+    "        print(current.val, end=\" -> \")\n",
+    "        current = current.next\n",
+    "    print(\"None\")\n",
+    "\n",
+    "# Example Test\n",
+    "\n",
+    "linked_list = create_linked_list([1, 2, 3, 4, 5, 6, 7, 8])\n",
+    "\n",
+    "M = 2\n",
+    "N = 2\n",
+    "new_head = skip_and_delete(linked_list, M, N)\n",
+    "\n",
+    "print_linked_list(new_head)  \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,11 +471,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "386ff92a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Linked List:\n",
+      "5 -> 12 -> 7 -> 10 -> 17 -> 2 -> 13 -> 4 -> 11 -> 6 -> None\n",
+      "Second Linked List:\n",
+      "12 -> 10 -> 2 -> 4 -> 6 -> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0):\n",
+    "        self.val = val\n",
+    "        self.next = None\n",
+    "\n",
+    "def insertAlternate(head1, head2):\n",
+    "    current1 = head1\n",
+    "    current2 = head2\n",
+    "\n",
+    "    while current1 and current2:\n",
+    "        next1 = current1.next\n",
+    "        next2 = current2.next\n",
+    "\n",
+    "        current1.next = current2\n",
+    "        current2.next = next1\n",
+    "\n",
+    "        current1 = next1\n",
+    "        current2 = next2\n",
+    "\n",
+    "    head2 = None\n",
+    "\n",
+    "def createLinkedList(values):\n",
+    "    dummy = ListNode()\n",
+    "    current = dummy\n",
+    "    for val in values:\n",
+    "        current.next = ListNode(val)\n",
+    "        current = current.next\n",
+    "    return dummy.next\n",
+    "\n",
+    "def printLinkedList(head):\n",
+    "    current = head\n",
+    "    while current:\n",
+    "        print(current.val, end=\" -> \")\n",
+    "        current = current.next\n",
+    "    print(\"None\")\n",
+    "\n",
+    "# Example Test\n",
+    "values1 = [5, 7, 17, 13, 11]\n",
+    "values2 = [12, 10, 2, 4, 6]\n",
+    "\n",
+    "head1 = createLinkedList(values1)\n",
+    "\n",
+    "insertAlternate(head1, head2)\n",
+    "head2 = createLinkedList(values2)\n",
+    "\n",
+    "print(\"First Linked List:\")\n",
+    "printLinkedList(head1)  \n",
+    "\n",
+    "print(\"Second Linked List:\")\n",
+    "printLinkedList(head2) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,11 +552,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "91b3148a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def is_circular(head):\n",
+    "    if not head:\n",
+    "        return False\n",
+    "\n",
+    "    slow, fast = head, head\n",
+    "\n",
+    "    while fast and fast.next:\n",
+    "        slow = slow.next\n",
+    "        fast = fast.next.next\n",
+    "\n",
+    "        if slow == fast:\n",
+    "            return True\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "# Example Test\n",
+    "head = ListNode(1)\n",
+    "head.next = ListNode(2)\n",
+    "head.next.next = ListNode(3)\n",
+    "head.next.next.next = ListNode(4)\n",
+    "head.next.next.next.next = ListNode(5)\n",
+    "head.next.next.next.next.next = head.next\n",
+    "\n",
+    "result = is_circular(head)\n",
+    "print(result) \n"
+   ]
   }
  ],
  "metadata": {
