--- a/Assignment 13.ipynb
+++ b/Assignment 13.ipynb
@@ -8,7 +8,10 @@
     "# Q1.\n",
     "### Given two linked list of the same size, the task is to create a new linked list using those linked lists. The condition is that the greater node among both linked list will be added to the new linked list.\n",
     "\n",
-    "**Examples:**"
+    "### **Examples:**\n",
+    "### Input: list1 = 5->2->3->8\n",
+    "### list2 = 1->7->4->5\n",
+    "### Output: New list = 5->7->4->8"
    ]
   },
   {
@@ -25,7 +28,16 @@
    "metadata": {},
    "source": [
     "# Q2.\n",
-    "###"
+    "### Write a function that takes a list sorted in non-decreasing order and deletes any duplicate nodes from the list. The list should only be traversed once.\n",
+    "\n",
+    "### For example if the linked list is 11->11->11->21->43->43->60 then removeDuplicates() should convert the list to 11->21->43->60.\n",
+    "\n",
+    "### **Example 1:**\n",
+    "### Input:\n",
+    "### LinkedList: \n",
+    "### 11->11->11->21->43->43->60\n",
+    "### Output:\n",
+    "### 11->21->43->60"
    ]
   },
   {
@@ -42,7 +54,15 @@
    "metadata": {},
    "source": [
     "# Q3.\n",
-    "###"
+    "### Given a linked list of size **N**. The task is to reverse every **k** nodes (where k is an input to the function) in the linked list. If the number of nodes is not a multiple of *k* then left-out nodes, in the end, should be considered as a group and must be reversed (See Example 2 for clarification).\n",
+    "\n",
+    "### **Example 1:**\n",
+    "### Input:\n",
+    "### LinkedList: 1->2->2->4->5->6->7->8\n",
+    "### K = 4\n",
+    "### Output:4 2 2 1 8 7 6 5\n",
+    "### Explanation:\n",
+    "### The first 4 elements 1,2,2,4 are reversed first and then the next 4 elements 5,6,7,8. Hence, the resultant linked list is 4->2->2->1->8->7->6->5."
    ]
   },
   {
@@ -59,7 +79,11 @@
    "metadata": {},
    "source": [
     "# Q4.\n",
-    "###"
+    "### Given a linked list, write a function to reverse every alternate k nodes (where k is an input to the function) in an efficient way. Give the complexity of your algorithm.\n",
+    "\n",
+    "### **Example:**\n",
+    "### Inputs:   1->2->3->4->5->6->7->8->9->NULL and k = 3\n",
+    "### Output:   3->2->1->4->5->6->9->8->7->NULL."
    ]
   },
   {
@@ -76,7 +100,11 @@
    "metadata": {},
    "source": [
     "# Q5.\n",
-    "###"
+    "### Given a linked list and a key to be deleted. Delete last occurrence of key from linked. The list may have duplicates.\n",
+    "\n",
+    "### **Examples**:\n",
+    "### Input:   1->2->3->5->2->10, key = 2\n",
+    "### Output:  1->2->3->5->10"
    ]
   },
   {
@@ -93,7 +121,13 @@
    "metadata": {},
    "source": [
     "# Q6.\n",
-    "###"
+    "### Given two sorted linked lists consisting of **N** and **M** nodes respectively. The task is to merge both of the lists (in place) and return the head of the merged list.\n",
+    "\n",
+    "### **Examples:**\n",
+    "\n",
+    "### Input: a: 5->10->15, b: 2->3->20\n",
+    "\n",
+    "### Output: 2->3->5->10->15->20"
    ]
   },
   {
@@ -110,7 +144,11 @@
    "metadata": {},
    "source": [
     "# Q7.\n",
-    "###"
+    "### Given a **Doubly Linked List**, the task is to reverse the given Doubly Linked List.\n",
+    "\n",
+    "### **Example:**\n",
+    "### Original Linked list 10 8 4 2\n",
+    "### Reversed Linked list 2 4 8 10"
    ]
   },
   {
@@ -127,7 +165,14 @@
    "metadata": {},
    "source": [
     "# Q8.\n",
-    "###"
+    "### Given a doubly linked list and a position. The task is to delete a node from given position in a doubly linked list.\n",
+    "\n",
+    "### **Example 1:**\n",
+    "### Input:\n",
+    "### LinkedList = 1 <--> 3 <--> 4\n",
+    "### x = 3\n",
+    "### Output:1 3\n",
+    "### Explanation:After deleting the node at position 3 (position starts from 1), the linked list will be now as 1->3."
    ]
   },
   {
