--- a/Assignment 13.ipynb
+++ b/Assignment 13.ipynb
@@ -16,11 +16,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "492287f1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 -> 7 -> 4 -> 8 -> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def create_new_linked_list(list1, list2):\n",
+    "    if not list1 or not list2:\n",
+    "        return None\n",
+    "\n",
+    "    new_head = ListNode(max(list1.val, list2.val))\n",
+    "    current = new_head\n",
+    "    ptr1, ptr2 = list1.next, list2.next\n",
+    "\n",
+    "    while ptr1 and ptr2:\n",
+    "        max_val = max(ptr1.val, ptr2.val)\n",
+    "        current.next = ListNode(max_val)\n",
+    "        current = current.next\n",
+    "        ptr1, ptr2 = ptr1.next, ptr2.next\n",
+    "\n",
+    "    return new_head\n",
+    "\n",
+    "def print_linked_list(head):\n",
+    "    current = head\n",
+    "    while current:\n",
+    "        print(current.val, end=\" -> \")\n",
+    "        current = current.next\n",
+    "    print(\"None\")\n",
+    "\n",
+    "# ExampleTest\n",
+    "linked_list1 = ListNode(5)\n",
+    "linked_list1.next = ListNode(2)\n",
+    "linked_list1.next.next = ListNode(3)\n",
+    "linked_list1.next.next.next = ListNode(8)\n",
+    "\n",
+    "linked_list2 = ListNode(1)\n",
+    "linked_list2.next = ListNode(7)\n",
+    "linked_list2.next.next = ListNode(4)\n",
+    "linked_list2.next.next.next = ListNode(5)\n",
+    "\n",
+    "new_head = create_new_linked_list(linked_list1, linked_list2)\n",
+    "\n",
+    "print_linked_list(new_head)  \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,11 +93,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "112878a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 -> 21 -> 43 -> 60 -> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def remove_duplicates(head):\n",
+    "    if not head:\n",
+    "        return None\n",
+    "\n",
+    "    current = head\n",
+    "\n",
+    "    while current.next:\n",
+    "        if current.val == current.next.val:\n",
+    "            current.next = current.next.next\n",
+    "        else:\n",
+    "            current = current.next\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def create_linked_list(values):\n",
+    "    if not values:\n",
+    "        return None\n",
+    "\n",
+    "    head = ListNode(values[0])\n",
+    "    current = head\n",
+    "    for val in values[1:]:\n",
+    "        current.next = ListNode(val)\n",
+    "        current = current.next\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def print_linked_list(head):\n",
+    "    current = head\n",
+    "    while current:\n",
+    "        print(current.val, end=\" -> \")\n",
+    "        current = current.next\n",
+    "    print(\"None\")\n",
+    "\n",
+    "# ExampleTest\n",
+    "linked_list = create_linked_list([11, 11, 11, 21, 43, 43, 60])\n",
+    "\n",
+    "new_head = remove_duplicates(linked_list)\n",
+    "\n",
+    "print_linked_list(new_head)  \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,11 +171,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b94fc87a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 -> 2 -> 2 -> 1 -> 8 -> 7 -> 6 -> 5 -> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def reverse_k_nodes(head, k):\n",
+    "    def reverse_group(start, end):\n",
+    "        prev, curr = None, start\n",
+    "        while curr != end:\n",
+    "            next_node = curr.next\n",
+    "            curr.next = prev\n",
+    "            prev = curr\n",
+    "            curr = next_node\n",
+    "        return prev\n",
+    "\n",
+    "    current, count = head, 0\n",
+    "\n",
+    "    while current and count < k:\n",
+    "        current = current.next\n",
+    "        count += 1\n",
+    "\n",
+    "    if count < k:\n",
+    "        return head\n",
+    "\n",
+    "    new_head = reverse_group(head, current)\n",
+    "\n",
+    "    head.next = reverse_k_nodes(current, k)\n",
+    "\n",
+    "    return new_head\n",
+    "\n",
+    "def create_linked_list(values):\n",
+    "    if not values:\n",
+    "        return None\n",
+    "\n",
+    "    head = ListNode(values[0])\n",
+    "    current = head\n",
+    "    for val in values[1:]:\n",
+    "        current.next = ListNode(val)\n",
+    "        current = current.next\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def print_linked_list(head):\n",
+    "    current = head\n",
+    "    while current:\n",
+    "        print(current.val, end=\" -> \")\n",
+    "        current = current.next\n",
+    "    print(\"None\")\n",
+    "\n",
+    "# ExampleTest\n",
+    "linked_list = create_linked_list([1, 2, 2, 4, 5, 6, 7, 8])\n",
+    "\n",
+    "k = 4\n",
+    "new_head = reverse_k_nodes(linked_list, k)\n",
+    "\n",
+    "print_linked_list(new_head) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,11 +257,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d1aa53e5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 -> 2 -> 1 -> 6 -> 5 -> 4 -> 9 -> 8 -> 7 -> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def reverse_k_alternate_nodes(head, k):\n",
+    "    def reverse_group(start, k, reverse):\n",
+    "        prev, curr = None, start\n",
+    "        count = 0\n",
+    "        while curr and count < k:\n",
+    "            next_node = curr.next\n",
+    "            if reverse:\n",
+    "                curr.next = prev\n",
+    "            prev = curr\n",
+    "            curr = next_node\n",
+    "            count += 1\n",
+    "\n",
+    "        if reverse:\n",
+    "            start.next = reverse_k_alternate_nodes(curr, k)\n",
+    "        else:\n",
+    "            for _ in range(k):\n",
+    "                if not curr:\n",
+    "                    break\n",
+    "                curr = curr.next\n",
+    "            start.next = reverse_k_alternate_nodes(curr, k)\n",
+    "\n",
+    "        return prev\n",
+    "\n",
+    "    if not head:\n",
+    "        return None\n",
+    "\n",
+    "    return reverse_group(head, k, True)\n",
+    "\n",
+    "def create_linked_list(values):\n",
+    "    if not values:\n",
+    "        return None\n",
+    "\n",
+    "    head = ListNode(values[0])\n",
+    "    current = head\n",
+    "    for val in values[1:]:\n",
+    "        current.next = ListNode(val)\n",
+    "        current = current.next\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def print_linked_list(head):\n",
+    "    current = head\n",
+    "    while current:\n",
+    "        print(current.val, end=\" -> \")\n",
+    "        current = current.next\n",
+    "    print(\"None\")\n",
+    "\n",
+    "# ExampleTest\n",
+    "\n",
+    "linked_list = create_linked_list([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+    "\n",
+    "k = 3\n",
+    "new_head = reverse_k_alternate_nodes(linked_list, k)\n",
+    "\n",
+    "print_linked_list(new_head) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,11 +347,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ebfd6057",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 2 -> 3 -> 5 -> 10 -> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def delete_last_occurrence(head, key):\n",
+    "    if not head:\n",
+    "        return None\n",
+    "\n",
+    "    last_occurrence = None\n",
+    "    prev_last_occurrence = None\n",
+    "    current = head\n",
+    "\n",
+    "    while current:\n",
+    "        if current.val == key:\n",
+    "            last_occurrence = current\n",
+    "            prev_last_occurrence = prev\n",
+    "        prev = current\n",
+    "        current = current.next\n",
+    "\n",
+    "    if not last_occurrence:\n",
+    "        return head\n",
+    "\n",
+    "    if prev_last_occurrence:\n",
+    "        prev_last_occurrence.next = last_occurrence.next\n",
+    "    else:\n",
+    "        head = head.next\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def create_linked_list(values):\n",
+    "    if not values:\n",
+    "        return None\n",
+    "\n",
+    "    head = ListNode(values[0])\n",
+    "    current = head\n",
+    "    for val in values[1:]:\n",
+    "        current.next = ListNode(val)\n",
+    "        current = current.next\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def print_linked_list(head):\n",
+    "    current = head\n",
+    "    while current:\n",
+    "        print(current.val, end=\" -> \")\n",
+    "        current = current.next\n",
+    "    print(\"None\")\n",
+    "\n",
+    "# ExampleTest\n",
+    "\n",
+    "linked_list = create_linked_list([1, 2, 3, 5, 2, 10])\n",
+    "\n",
+    "key = 2\n",
+    "new_head = delete_last_occurrence(linked_list, key)\n",
+    "\n",
+    "print_linked_list(new_head) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,11 +436,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "eb21f3bf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 -> 3 -> 5 -> 10 -> 15 -> 20 -> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def merge_sorted_lists(a, b):\n",
+    "\n",
+    "    dummy = ListNode(-1)\n",
+    "    current = dummy\n",
+    "\n",
+    "    while a and b:\n",
+    "        if a.val < b.val:\n",
+    "            current.next = a\n",
+    "            a = a.next\n",
+    "        else:\n",
+    "            current.next = b\n",
+    "            b = b.next\n",
+    "\n",
+    "        current = current.next\n",
+    "\n",
+    "    if a:\n",
+    "        current.next = a\n",
+    "    if b:\n",
+    "        current.next = b\n",
+    "\n",
+    "    return dummy.next\n",
+    "\n",
+    "def create_linked_list(values):\n",
+    "    if not values:\n",
+    "        return None\n",
+    "\n",
+    "    head = ListNode(values[0])\n",
+    "    current = head\n",
+    "    for val in values[1:]:\n",
+    "        current.next = ListNode(val)\n",
+    "        current = current.next\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def print_linked_list(head):\n",
+    "    current = head\n",
+    "    while current:\n",
+    "        print(current.val, end=\" -> \")\n",
+    "        current = current.next\n",
+    "    print(\"None\")\n",
+    "\n",
+    "# ExampleTest\n",
+    "list1 = create_linked_list([5, 10, 15])\n",
+    "list2 = create_linked_list([2, 3, 20])\n",
+    "\n",
+    "merged_head = merge_sorted_lists(list1, list2)\n",
+    "\n",
+    "print_linked_list(merged_head)  \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -153,11 +519,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "386ff92a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 <-> 4 <-> 8 <-> 10 <-> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "\n",
+    "def reverse_doubly_linked_list(head):\n",
+    "    current = head\n",
+    "    prev = None\n",
+    "\n",
+    "    while current:\n",
+    "        current.next, current.prev = current.prev, current.next\n",
+    "        prev = current\n",
+    "        current = current.prev  \n",
+    "\n",
+    "    head = prev\n",
+    "    return head\n",
+    "\n",
+    "\n",
+    "def create_doubly_linked_list(values):\n",
+    "    if not values:\n",
+    "        return None\n",
+    "\n",
+    "    head = Node(values[0])\n",
+    "    current = head\n",
+    "    for val in values[1:]:\n",
+    "        new_node = Node(val)\n",
+    "        current.next = new_node\n",
+    "        new_node.prev = current\n",
+    "        current = new_node\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def print_doubly_linked_list(head):\n",
+    "    current = head\n",
+    "    while current:\n",
+    "        print(current.data, end=\" <-> \")\n",
+    "        current = current.next\n",
+    "    print(\"None\")\n",
+    "\n",
+    "# ExampleTest\n",
+    "linked_list = create_doubly_linked_list([10, 8, 4, 2])\n",
+    "\n",
+    "reversed_head = reverse_doubly_linked_list(linked_list)\n",
+    "\n",
+    "print_doubly_linked_list(reversed_head) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,11 +598,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "91b3148a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 <-> 3 <-> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "\n",
+    "def delete_node_from_position(head, position):\n",
+    "    if not head:\n",
+    "        return None\n",
+    "\n",
+    "    current = head\n",
+    "    count = 1\n",
+    "\n",
+    "    while current and count < position:\n",
+    "        current = current.next\n",
+    "        count += 1\n",
+    "\n",
+    "    if not current:\n",
+    "        return head  \n",
+    "\n",
+    "    if current.prev:\n",
+    "        current.prev.next = current.next\n",
+    "    else:\n",
+    "        head = current.next\n",
+    "\n",
+    "    if current.next:\n",
+    "        current.next.prev = current.prev\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def create_doubly_linked_list(values):\n",
+    "    if not values:\n",
+    "        return None\n",
+    "\n",
+    "    head = Node(values[0])\n",
+    "    current = head\n",
+    "    for val in values[1:]:\n",
+    "        new_node = Node(val)\n",
+    "        current.next = new_node\n",
+    "        new_node.prev = current\n",
+    "        current = new_node\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def print_doubly_linked_list(head):\n",
+    "    current = head\n",
+    "    while current:\n",
+    "        print(current.data, end=\" <-> \")\n",
+    "        current = current.next\n",
+    "    print(\"None\")\n",
+    "\n",
+    "# Example Test\n",
+    "linked_list = create_doubly_linked_list([1, 3, 4])\n",
+    "\n",
+    "position = 3\n",
+    "new_head = delete_node_from_position(linked_list, position)\n",
+    "\n",
+    "print_doubly_linked_list(new_head)  \n"
+   ]
   }
  ],
  "metadata": {
