--- a/Assignment 14.ipynb
+++ b/Assignment 14.ipynb
@@ -700,8 +700,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "91b3148a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 -> 1 -> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def remove_zero_sum_sublists(head):\n",
+    "    \n",
+    "    def get_linked_list_values(node):\n",
+    "        values = []\n",
+    "        while node:\n",
+    "            values.append(node.val)\n",
+    "            node = node.next\n",
+    "        return values\n",
+    "\n",
+    "    def create_linked_list(values):\n",
+    "        if not values:\n",
+    "            return None\n",
+    "\n",
+    "        head = ListNode(values[0])\n",
+    "        current = head\n",
+    "        for val in values[1:]:\n",
+    "            current.next = ListNode(val)\n",
+    "            current = current.next\n",
+    "\n",
+    "        return head\n",
+    "\n",
+    "    values_list = get_linked_list_values(head)\n",
+    "\n",
+    "    cumulative_sum = 0\n",
+    "    sum_map = {}\n",
+    "    for i in range(len(values_list)):\n",
+    "        cumulative_sum += values_list[i]\n",
+    "        if cumulative_sum == 0:\n",
+    "\n",
+    "            head = create_linked_list(values_list[i + 1:])\n",
+    "            break\n",
+    "        elif cumulative_sum in sum_map:\n",
+    "            start_index = sum_map[cumulative_sum] + 1\n",
+    "            head = create_linked_list(values_list[:start_index] + values_list[i + 1:])\n",
+    "            break\n",
+    "        sum_map[cumulative_sum] = i\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "# Example Test\n",
+    "\n",
+    "linked_list = ListNode(1)\n",
+    "linked_list.next = ListNode(2)\n",
+    "linked_list.next.next = ListNode(-3)\n",
+    "linked_list.next.next.next = ListNode(3)\n",
+    "linked_list.next.next.next.next = ListNode(1)\n",
+    "\n",
+    "\n",
+    "new_head = remove_zero_sum_sublists(linked_list)\n",
+    "\n",
+    "current = new_head\n",
+    "while current:\n",
+    "    print(current.val, end=\" -> \")\n",
+    "    current = current.next\n",
+    "print(\"None\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "477777a6",
    "metadata": {},
    "outputs": [],
    "source": []
